# python_playwright_example

./: .env.example  .env.pre-commit  .gitignore  .pre-commit-config.yaml  .report.json  CLAUDE.md  README.md  conftest.py  pyproject.toml  pytest.ini  testing_strategy.md
.github/workflows/: playwright-tests.yml
docs/: framework_improvements.md  testing_strategy.md
models/: __init__.py
models/base/: BasePage.py  __init__.py
models/cart/: CartPage.py  __init__.py
models/checkout/: CheckoutCompletePage.py  CheckoutStepOnePage.py  CheckoutStepTwoPage.py  __init__.py
models/inventory/: InventoryPage.py  __init__.py
models/login/: LoginPage.py  __init__.py
test_data/: checkout.json  expected_data.json  products.json
tests/: conftest.py  test_checkout.py  test_e2e.py  test_login.py  test_logout.py
tests/api/: test_testful_booker.py
