[project]
name = "python-playwright-saucelabs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.55.0",
    "pytest>=8.4.2",
    "pytest-html>=4.1.1",
    "pytest-playwright>=0.7.1",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "pre-commit>=4.4.0",
    "ruff>=0.14.4",
]
